Fixed not showing asset and added QR Code to readme

--- a/src/app/measurements/measurements.component.scss
+++ b/src/app/measurements/measurements.component.scss
@@ -27,7 +27,7 @@
   width: 29em;
   height: 35em;
   align-self: center;
-  background-image: url("/assets/images/cistern-min-transparent.png");
+  background-image: url("../../assets/images/cistern-min-transparent.png");
   background-repeat: no-repeat;
   background-position: center;
 }
